  used for declaring the content-type of the body too. Us-ascii is now
  used for the body in such cases.
* When the 'fullnames' variable was set and the full name of a recipient
  was the only string in both header and body of an outgoing message that
  contained non-ASCII characters, no conversion between terminal character
  set and outgoing character set was performed for it.
* Resolved a symbol conflict with SVR4 systems like Solaris that lead to
  failed builds because of a redeclaration of 'enum idtype'.
* When announcing messages after a folder open or a 'newmail' command, a
  deleted message can no longer become the current message unless all the
  messages have been deleted. This applies to message deleted by the
  'folder-hook' mechanism in particular.

[11.19] released 1/2/05
* A 'chained-junk-tokens' variable was introduced for the Bayesian junk
  mail filter. If set, the filter considers two-word tokens as described
  in Jonathan A. Zdziarski's paper 'Advanced Language Classification using
  Chained Tokens', <http://www.nuclearelephant.com/papers/chained.html>.
* When running in a UTF-8 locale, unprintable characters are now replaced
  by Unicode control pictures or the Unicode replacement character when
  printing to a terminal.
* The 'show' command now also avoids writing unprintable characters to a
  terminal. Same for the 'classify' command with the 'verbose' option set.
* Only MIME-encode words in header fields if they start with '=?' or end
  with '?=' (instead of encoding any words containing '?', '=', or '_'),
  and declare them as 'us-ascii' if they do not contain any bytes with the
  highest bit set (Bugreport by Suresh Ramasubramanian).
* Fixed a junk mail tokenizer bug which caused the remainder of a message
  to be ignored if a period occurred at the first position following another
  token boundary.
* 'In-Reply-To' fields that refer to multiple message-IDs are now handled;